# libre-faucet

./: CMakeLists.txt  README.md  build.sh
contracts/: CMakeLists.txt
contracts/faucet/: CMakeLists.txt  faucet.abi  faucet.wasm  makefile
contracts/faucet/ricardian/: faucet.contracts.md.in
contracts/faucet/src/: faucet.cpp
faucet/include/: faucet.hpp
